# MSFS_bridge

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Config.hpp  EventMap.hpp  EventTypes.hpp  FlightSimBridge.hpp  FlightSimClient.hpp  FrequencyController.hpp  FrequencyControllerCom.hpp  FrequencyControllerNav.hpp  Logger.hpp  MSFSController.hpp  UdpCommandHandler.hpp  UdpReceiver.hpp  msfs_events.hpp
src/: FlightSimBridge.cpp  FlightSimClient.cpp  FrequencyController.cpp  FrequencyControllerCom.cpp  FrequencyControllerNav.cpp  Logger.cpp  MSFSController.cpp  UdpCommandHandler.cpp  UdpReceiver.cpp  main.cpp
